// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-pagination should disable both first and previous page buttons when on the first page and count greater than 5 1`] = `
<modus-wc-pagination count="15" page="1">
  <div aria-label="pagination test" class="modus-wc-join modus-wc-pagination">
    <button aria-label="First page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn" disabled="">
      <svg class="mi-chevron-double-left modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="m14.42 12 3.88-3.88a.996.996 0 1 0-1.41-1.41L12.3 11.3a.996.996 0 0 0 0 1.41l4.59 4.59c.38.38 1.01.38 1.4-.01a.996.996 0 0 0 0-1.41zm-2.71-5.29a.996.996 0 0 0-1.41 0L5.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59c.38.38 1.01.38 1.4-.01s.39-1.02 0-1.41L7.83 12l3.88-3.88a.996.996 0 0 0 0-1.41"></path>
      </svg>
    </button>
    <button aria-label="Previous page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn" disabled="">
      <svg class="mi-chevron-left modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"></path>
      </svg>
    </button>
    <button aria-current="page" class="modus-wc-btn modus-wc-btn-active modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-active modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 1
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        1
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 2
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        2
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 3
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        3
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 4
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        4
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 5
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        5
      </span>
    </button>
    <button aria-label="Next page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn">
      <svg class="mi-chevron-right modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"></path>
      </svg>
    </button>
    <button aria-label="Last page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn">
      <svg class="mi-chevron-double-right modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M7.12 6.71c-.39-.39-1.03-.39-1.42 0a.996.996 0 0 0 0 1.41L9.58 12 5.7 15.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41zm11.17 4.58L13.7 6.7c-.38-.38-1.02-.38-1.41 0a.996.996 0 0 0 0 1.41l3.88 3.88-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41Z"></path>
      </svg>
    </button>
  </div>
</modus-wc-pagination>
`;

exports[`modus-wc-pagination should disable both last and next page buttons when on the last page and count greater than 5 1`] = `
<modus-wc-pagination count="15" page="15">
  <div aria-label="pagination test" class="modus-wc-join modus-wc-pagination">
    <button aria-label="First page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn">
      <svg class="mi-chevron-double-left modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="m14.42 12 3.88-3.88a.996.996 0 1 0-1.41-1.41L12.3 11.3a.996.996 0 0 0 0 1.41l4.59 4.59c.38.38 1.01.38 1.4-.01a.996.996 0 0 0 0-1.41zm-2.71-5.29a.996.996 0 0 0-1.41 0L5.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59c.38.38 1.01.38 1.4-.01s.39-1.02 0-1.41L7.83 12l3.88-3.88a.996.996 0 0 0 0-1.41"></path>
      </svg>
    </button>
    <button aria-label="Previous page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn">
      <svg class="mi-chevron-left modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"></path>
      </svg>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 11
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        11
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 12
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        12
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 13
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        13
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 14
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        14
      </span>
    </button>
    <button aria-current="page" class="modus-wc-btn modus-wc-btn-active modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-active modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 15
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        15
      </span>
    </button>
    <button aria-label="Next page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn" disabled="">
      <svg class="mi-chevron-right modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"></path>
      </svg>
    </button>
    <button aria-label="Last page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn" disabled="">
      <svg class="mi-chevron-double-right modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M7.12 6.71c-.39-.39-1.03-.39-1.42 0a.996.996 0 0 0 0 1.41L9.58 12 5.7 15.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41zm11.17 4.58L13.7 6.7c-.38-.38-1.02-.38-1.41 0a.996.996 0 0 0 0 1.41l3.88 3.88-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41Z"></path>
      </svg>
    </button>
  </div>
</modus-wc-pagination>
`;

exports[`modus-wc-pagination should disable next page button when on the last page 1`] = `
<modus-wc-pagination count="5" page="5">
  <div aria-label="pagination test" class="modus-wc-join modus-wc-pagination">
    <button aria-label="Previous page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn">
      <svg class="mi-chevron-left modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"></path>
      </svg>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 1
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        1
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 2
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        2
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 3
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        3
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 4
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        4
      </span>
    </button>
    <button aria-current="page" class="modus-wc-btn modus-wc-btn-active modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-active modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 5
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        5
      </span>
    </button>
    <button aria-label="Next page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn" disabled="">
      <svg class="mi-chevron-right modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"></path>
      </svg>
    </button>
  </div>
</modus-wc-pagination>
`;

exports[`modus-wc-pagination should disable previous page button when on the first page 1`] = `
<modus-wc-pagination count="5" page="1">
  <div aria-label="pagination test" class="modus-wc-join modus-wc-pagination">
    <button aria-label="Previous page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn" disabled="">
      <svg class="mi-chevron-left modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"></path>
      </svg>
    </button>
    <button aria-current="page" class="modus-wc-btn modus-wc-btn-active modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-active modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 1
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        1
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 2
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        2
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 3
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        3
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 4
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        4
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 5
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        5
      </span>
    </button>
    <button aria-label="Next page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn">
      <svg class="mi-chevron-right modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"></path>
      </svg>
    </button>
  </div>
</modus-wc-pagination>
`;

exports[`modus-wc-pagination should not render first and last page nav buttons when count is less than 5 1`] = `
<modus-wc-pagination count="5" page="4">
  <div aria-label="pagination test" class="modus-wc-join modus-wc-pagination">
    <button aria-label="Previous page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn">
      <svg class="mi-chevron-left modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"></path>
      </svg>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 1
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        1
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 2
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        2
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 3
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        3
      </span>
    </button>
    <button aria-current="page" class="modus-wc-btn modus-wc-btn-active modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-active modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 4
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        4
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 5
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        5
      </span>
    </button>
    <button aria-label="Next page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn">
      <svg class="mi-chevron-right modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"></path>
      </svg>
    </button>
  </div>
</modus-wc-pagination>
`;

exports[`modus-wc-pagination should render first and last page nav buttons when count is greater than 5 1`] = `
<modus-wc-pagination count="13" page="7">
  <div aria-label="pagination test" class="modus-wc-join modus-wc-pagination">
    <button aria-label="First page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn">
      <svg class="mi-chevron-double-left modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="m14.42 12 3.88-3.88a.996.996 0 1 0-1.41-1.41L12.3 11.3a.996.996 0 0 0 0 1.41l4.59 4.59c.38.38 1.01.38 1.4-.01a.996.996 0 0 0 0-1.41zm-2.71-5.29a.996.996 0 0 0-1.41 0L5.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59c.38.38 1.01.38 1.4-.01s.39-1.02 0-1.41L7.83 12l3.88-3.88a.996.996 0 0 0 0-1.41"></path>
      </svg>
    </button>
    <button aria-label="Previous page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn">
      <svg class="mi-chevron-left modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"></path>
      </svg>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 5
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        5
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 6
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        6
      </span>
    </button>
    <button aria-current="page" class="modus-wc-btn modus-wc-btn-active modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-active modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 7
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        7
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 8
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        8
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 9
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        9
      </span>
    </button>
    <button aria-label="Next page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn">
      <svg class="mi-chevron-right modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"></path>
      </svg>
    </button>
    <button aria-label="Last page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn">
      <svg class="mi-chevron-double-right modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M7.12 6.71c-.39-.39-1.03-.39-1.42 0a.996.996 0 0 0 0 1.41L9.58 12 5.7 15.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41zm11.17 4.58L13.7 6.7c-.38-.38-1.02-.38-1.41 0a.996.996 0 0 0 0 1.41l3.88 3.88-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41Z"></path>
      </svg>
    </button>
  </div>
</modus-wc-pagination>
`;

exports[`modus-wc-pagination should render with custom props 1`] = `
<modus-wc-pagination count="13" custom-class="test-custom-class" page="3" size="lg">
  <div aria-label="custom pagination" class="modus-wc-join modus-wc-pagination test-custom-class">
    <button aria-label="First page" class="modus-wc-btn modus-wc-btn-lg modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn">
      <svg class="mi-chevron-double-left modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="m14.42 12 3.88-3.88a.996.996 0 1 0-1.41-1.41L12.3 11.3a.996.996 0 0 0 0 1.41l4.59 4.59c.38.38 1.01.38 1.4-.01a.996.996 0 0 0 0-1.41zm-2.71-5.29a.996.996 0 0 0-1.41 0L5.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59c.38.38 1.01.38 1.4-.01s.39-1.02 0-1.41L7.83 12l3.88-3.88a.996.996 0 0 0 0-1.41"></path>
      </svg>
    </button>
    <button aria-label="Previous page" class="modus-wc-btn modus-wc-btn-lg modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn">
      <svg class="mi-chevron-left modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"></path>
      </svg>
    </button>
    <button class="modus-wc-btn modus-wc-btn-lg modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 1
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        1
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-lg modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 2
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        2
      </span>
    </button>
    <button aria-current="page" class="modus-wc-btn modus-wc-btn-active modus-wc-btn-lg modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-active modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 3
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        3
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-lg modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 4
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        4
      </span>
    </button>
    <button class="modus-wc-btn modus-wc-btn-lg modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 5
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        5
      </span>
    </button>
    <button aria-label="Next page" class="modus-wc-btn modus-wc-btn-lg modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn">
      <svg class="mi-chevron-right modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"></path>
      </svg>
    </button>
    <button aria-label="Last page" class="modus-wc-btn modus-wc-btn-lg modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn">
      <svg class="mi-chevron-double-right modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M7.12 6.71c-.39-.39-1.03-.39-1.42 0a.996.996 0 0 0 0 1.41L9.58 12 5.7 15.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41zm11.17 4.58L13.7 6.7c-.38-.38-1.02-.38-1.41 0a.996.996 0 0 0 0 1.41l3.88 3.88-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41Z"></path>
      </svg>
    </button>
  </div>
</modus-wc-pagination>
`;

exports[`modus-wc-pagination should render with default props 1`] = `
<modus-wc-pagination>
  <div aria-label="default pagination" class="modus-wc-join modus-wc-pagination">
    <button aria-label="Previous page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn" disabled="">
      <svg class="mi-chevron-left modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"></path>
      </svg>
    </button>
    <button aria-current="page" class="modus-wc-btn modus-wc-btn-active modus-wc-btn-md modus-wc-join-item modus-wc-pagination-btn modus-wc-pagination-page-active modus-wc-pagination-page-btn">
      <span class="modus-wc-sr-only">
        Page 1
      </span>
      <span aria-hidden="true" class="modus-wc-pagination-page-label">
        1
      </span>
    </button>
    <button aria-label="Next page" class="modus-wc-btn modus-wc-btn-md modus-wc-btn-square modus-wc-join-item modus-wc-pagination-btn" disabled="">
      <svg class="mi-chevron-right modus-wc-pagination-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"></path>
      </svg>
    </button>
  </div>
</modus-wc-pagination>
`;
